# bpe.cpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benches/: CMakeLists.txt  bench_bytes_char.cpp
examples/: CMakeLists.txt  encode_decode.cpp  train.cpp
include/bpe/: bpe.h  decoders.h  interfaces.h  normalizers.h  pretokenizers.h  tokenizer.h  trainer.h  types.h
src/: CMakeLists.txt
src/core/: normalized_string.cpp  tokenizer.cpp  tokenizer_impl.h
src/decoders/: factories.cpp
src/models/bpe/: bpe_impl.cpp  bpe_impl.h  builder.cpp  builder.h  cache.cpp  cache.h  serialization.cpp  serialization.h  trainer.cpp  trainer_impl.h  word.cpp  word.h
src/normalizers/: internal.h  normalizers.cpp
src/pretokenizers/: byte_level.cpp  byte_level.h  factories.cpp  regex_engine.cpp  regex_engine.h  sequence.cpp  sequence.h  split.cpp  split.h
src/utils/: bytes_char.cpp  bytes_char.h  dheap.h  parallel.h  unicode.h
tests/: CMakeLists.txt  test_bpe.cpp  test_byte_level.cpp  test_normalizer.cpp  test_split.cpp  test_tokenizer.cpp  test_trainer.cpp  test_variants.cpp  test_word.cpp
